[package]
name = "host"
authors = ["The Roc Contributors"]
edition = "2021"
license = "UPL-1.0"
links = "app"
version = "0.0.1"

[lib]
name = "host"
path = "lib.rs"
crate-type = ["staticlib", "rlib"]

[[bin]]
name = "host"
path = "main.rs"

[dependencies]
libc = "0.2"
roc_std = { git = "https://github.com/roc-lang/roc" }

[workspace]
